// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common/StarRating:  should match the snapshot template with no props and defaults 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__StarRatingContainer-sc-1cxyj6d-0 gFUPMk MuiGrid-container"
    data-testid="star-rating-container"
  >
    <div
      class="MuiGrid-root"
    >
      <span
        aria-label="0 Stars"
        class="MuiRating-root MuiRating-sizeSmall MuiRating-readOnly"
        data-testid="star-rating"
        role="img"
      >
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-6 makeStyles-iconEmpty-8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Common/StarRating:  should match the snapshot template with test props 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root components__StarRatingContainer-sc-1cxyj6d-0 gFUPMk MuiGrid-container"
    data-testid="star-rating-container"
  >
    <div
      class="MuiGrid-root"
    >
      <span
        aria-label="3 Stars"
        class="MuiRating-root MuiRating-sizeSmall MuiRating-readOnly"
        data-testid="star-rating"
        role="img"
      >
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconFilled makeStyles-iconFilled-1 makeStyles-iconFilled-3"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-2 makeStyles-iconEmpty-4"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-2 makeStyles-iconEmpty-4"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          class="MuiRating-decimal"
        >
          <span
            style="width: 0%; overflow: hidden; z-index: 1; position: absolute;"
          >
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-2 makeStyles-iconEmpty-4"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
          <span>
            <span
              class="MuiRating-icon MuiRating-iconEmpty makeStyles-iconEmpty-2 makeStyles-iconEmpty-4"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                />
              </svg>
            </span>
          </span>
        </span>
      </span>
      <span
        class="components__StarRatingsCount-sc-1cxyj6d-1 leVdRF star-rating-count"
        data-testid="star-rating-count"
      >
        (100)
      </span>
    </div>
  </div>
</DocumentFragment>
`;
